--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
               <!-- Maharaj S -->
               <div class="col-sm-4">
                 <div class="member-team">
-                  <img src="assets/images/team/m1.jpg" alt="Maharaj S">
+                  <img src="assets/images/team/Maharaj.png" alt="Maharaj S">
                   <div class="member-details">
                     <h3>Maharaj S</h3>
                     <p>Founder &amp; CEO</p>
@@ -613,7 +613,7 @@
                   <img src="assets/images/team/m1.jpg" alt="Thanu Ganesh NR">
                   <div class="member-details">
                     <h3>Thanu Ganesh NR</h3>
-                    <p>Team Lead</p>
+                    <p>Software Architect</p>
                     <ul class="social-icons">
                       <li><a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
                       <li><a href="#" title="Instagram"><i class="fa fa-instagram"></i></a></li>
@@ -625,7 +625,7 @@
               <!-- Subramaniam P -->
               <div class="col-sm-4">
                 <div class="member-team">
-                  <img src="assets/images/team/m3.jpg" alt="Subramaniam P">
+                  <img src="assets/images/team/Ajith.png" alt="Subramaniam P">
                   <div class="member-details">
                     <h3>Subramaniam P</h3>
                     <p>Senior Software Developer</p>
@@ -641,7 +641,7 @@
               <!-- Subash Hariharan AR -->
               <div class="col-sm-4">
                 <div class="member-team">
-                  <img src="assets/images/team/m2.jpg" alt="Subash Hariharan AR">
+                  <img src="assets/images/team/Hemali.png" alt="Subash Hariharan AR">
                   <div class="member-details">
                     <h3>hemalivekariya</h3>
                     <p>Senior Software Developer</p>
@@ -656,7 +656,7 @@
               <!-- Raaghav KR -->
               <div class="col-sm-4">
                 <div class="member-team">
-                  <img src="assets/images/team/m1.jpg" alt="Raaghav KR">
+                  <img src="assets/images/team/Ragav.png" alt="Raaghav KR">
                   <div class="member-details">
                     <h3>Raaghav KR</h3>
                     <p>Senior UI &amp; UX Designer</p>
